--- a/assets/css/header/header.css
+++ b/assets/css/header/header.css
@@ -1,13 +1,44 @@
 .encabezado{
+    width: 90%;
+    margin: 0 2%;
+}
+
+.encabezado__aluraGeek{
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    margin: 2.5rem;
 }
 
 .encabezado__menu{
-    padding: 0 auto;
-    align-self: center;
+    display: flex;
+    justify-content: space-between;
+    width: 60%;
+    align-items: center;
 }
 
-.encabezado__imagen{
-    width: 100%;
+.imagen__aluraGeek{
+    padding-bottom: 0.3rem;
+}
+
+.barra__busqueda{
+    border: none;
+    border-radius: 20px;
+    background-color: #f5f5f5;
+    font-family: Raleway;
+    padding-left: 1rem;
+    height: 2.5rem ;
+    width: 25rem;
+}
+
+.login__btn{
+    color: #2a7ae4;
+    background-color: #ffffff;
+    font-family: Raleway;
+    font-weight: 400;
+    font-size: 1rem;
+    height: 3.1875rem;
+    width: 11.375rem;
+    border: 0.5px solid #2a7ae4 ;
+    margin-left: 40%;
+
 }
