--- a/assets/css/main/formulario.css
+++ b/assets/css/main/formulario.css
@@ -4,7 +4,7 @@
 
 .formulario{
     width: 90%;
-    margin: 3rem 5%;
+    margin: 0 5%;
     display: flex;
     justify-content: space-between;
     padding: 3rem 0;
