--- a/assets/css/header/header.css
+++ b/assets/css/header/header.css
@@ -1,4 +1,6 @@
 .encabezado{
+    display: flex;
+    flex-direction: column;
     width: 90%;
     margin: 0 2%;
 }
@@ -30,15 +32,20 @@
     width: 25rem;
 }
 
-.login__btn{
-    color: #2a7ae4;
+
+.login__btn {
     background-color: #ffffff;
+    color: #2a7ae4;
+    border: 0.5px solid #2a7ae4 ;
     font-family: Raleway;
     font-weight: 400;
     font-size: 1rem;
     height: 3.1875rem;
     width: 11.375rem;
-    border: 0.5px solid #2a7ae4 ;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    display: inline-block;
     margin-left: 40%;
-
-}
+    }
+ 
