--- a/assets/css/header/header.css
+++ b/assets/css/header/header.css
@@ -1,14 +1,14 @@
 .encabezado{
     display: flex;
     flex-direction: column;
-    width: 90%;
-    margin: 0 2%;
+    width: 95%;
 }
 
 .encabezado__aluraGeek{
     display: flex;
     justify-content: space-between;
-    margin: 2.5rem;
+    margin: 2.5rem 2.5rem;
+    width: 90%;
 }
 
 .encabezado__menu{
