--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -1,3 +1,20 @@
 .body{
-    width: auto;
+    width: 100%;
+}
+
+
+@media  screen and (max-width:425px) {
+    .body{
+        width: 100%;
+        height: 100vw;
+        margin: 0%;
+    }
+    
+    .principal{
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+
+    
 }
