--- a/assets/css/footer/footer.css
+++ b/assets/css/footer/footer.css
@@ -16,3 +16,10 @@
     line-height: 100%;
     padding: 0.5rem 0;
 }
+
+@media  screen and (max-width:425px){
+
+    .footer{
+        width: 100%;
+    }
+}
