--- a/assets/css/main/formulario.css
+++ b/assets/css/main/formulario.css
@@ -61,6 +61,7 @@
     border: none;
     border-bottom: 1px solid #c8c8c8;
     padding: 0.2rem 100% 1rem 0.2rem;
+    resize: none;
 }
 
 .mensaje_btn{
@@ -76,6 +77,40 @@
     z-index: 1;
     overflow: hidden;
     display: inline-block;
+}
+
+@media  screen and (max-width:425px){
+    .formulario{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+
+    .formulario__contacto{
+        display: flex;
+        width: 70%;
+        align-items: center;
+        margin-top: 1rem;
+    }
+
+    #contacto__titulo{
+        display: flex;
+        flex-wrap: nowrap;
+        margin-bottom: 1rem;
+    }
+
+    .form__input{
+        width: 60%;
+        align-items: center;
+        padding: 0.2rem 100% 1rem 0.2rem;
+        margin: .5rem 0 .5rem -30%;
+    }
+
+    .sobre__nosotros{
+        margin: 2rem 0;
+        align-items: center;
+    }
 }
 
 
