--- a/assets/css/main/productos.css
+++ b/assets/css/main/productos.css
@@ -73,3 +73,22 @@
 .consolas{
     padding: 2rem 0;
 }
+
+@media  screen and (max-width:425px){
+    .starWars__productos, .consolas__productos, .diversos__productos{
+        display: flex;
+        flex-wrap: wrap;
+        
+    }
+
+    .starWars__producto, .consolas__producto, .diversos__producto{
+        padding: 1rem 0;
+    }
+
+    .producto__img{
+        width: 100%;
+        height: 75%;
+    }
+
+
+}
